# hs-project

./: .-env  Guardfile  README.md  apply-project  ctags  specs.cabal
specs/: Specs.hs
