

test-suite PROJECT-specs
  type:                exitcode-stdio-1.0
  hs-source-dirs:      specs
  main-is:             Specs.hs
  build-depends:         base       == 4.6.*
                       , hspec      == 1.7.*
                       , QuickCheck == 2.6.*

source-repository this
  type:                git
  location:            git://github.com/erochest/PROJECT.git
