

test-suite PROJECT-specs
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded -rtsopts
  hs-source-dirs:      specs
  main-is:             Specs.hs
  build-depends:         base       == 4.6.*
                       , tasty
                       , tasty-golden
                       , tasty-quickcheck
                       , tasty-hspec
                       , hspec
                       , QuickCheck
  default-language:    Haskell2010

source-repository this
  type:                git
  location:            git://github.com/erochest/PROJECT.git
